doc: add tutorial document.

--- a/idoc.chapters.yml
+++ b/idoc.chapters.yml
@@ -136,3 +136,88 @@
 - tags/var.md: <var>
 - tags/video.md: <video>
 - tags/wbr.md: <wbr>
+
+## HTML Tutorial
+
+- tutorial/: HTML 教程
+- tutorial/README.md: HTML HOME
+- tutorial/intro.md: HTML 简介 Introduction
+- tutorial/editors.md: HTML 编辑器 Editors
+- tutorial/basic.md: HTML 基础 Basic
+- tutorial/elements.md: HTML 元素 Elements
+- tutorial/attributes.md: HTML 属性 Attributes
+- tutorial/headings.md: HTML 标题 Headings
+- tutorial/paragraphs.md: HTML 段落 Paragraphs
+- tutorial/styles.md: HTML 样式 Styles
+- tutorial/formatting.md: HTML 格式化 Formatting
+- tutorial/quotation_elements.md: HTML 引用 Quotations
+- tutorial/comments.md: HTML 注释 Comments
+- tutorial/colors.md: HTML 颜色 Colors
+- tutorial/css.md: HTML CSS
+- tutorial/links.md: HTML 链接 Links
+- tutorial/images.md: HTML 图片 Images
+- tutorial/favicon.md: HTML 网站图标 Favicon
+- tutorial/tables.md: HTML 表格 Tables
+- tutorial/lists.md: HTML 列表 Lists
+- tutorial/blocks.md: HTML 块 & 内联 Block & Inline
+- tutorial/classes.md: HTML 类 Classes
+- tutorial/id.md: HTML Id
+- tutorial/iframe.md: HTML 内联框架 Iframes
+- tutorial/scripts.md: HTML JavaScript
+- tutorial/filepaths.md: HTML 路径 File Paths
+- tutorial/head.md: HTML 头部 Head
+- tutorial/layout.md: HTML 布局 Layout
+- tutorial/responsive.md: HTML 响应式 Responsive
+- tutorial/computercode_elements.md: HTML 计算机代码 Computercode
+- tutorial/semantic_elements.md: HTML 语义 Semantics
+- tutorial/syntax.md: HTML 代码约定 Style Guide
+- tutorial/entities.md: HTML 实体 Entities
+- tutorial/symbols.md: HTML 符号 Symbols
+- tutorial/emojis.md: HTML 标签符号 Emojis
+- tutorial/charset.md: HTML 字符集 Charset
+- tutorial/urlencode.md: HTML URL 编码 URL Encode
+- tutorial/xhtml.md: HTML vs. XHTML
+
+## HTML Forms
+
+- tutorial/: HTML 表单 Forms
+- tutorial/forms.md: HTML 表单
+- tutorial/forms_attributes.md: HTML 表单属性
+- tutorial/form_elements.md: HTML 表单元素
+- tutorial/form_input_types.md: HTML 输入类型
+- tutorial/form_attributes.md: HTML 输入属性
+- tutorial/form_attributes_form.md: HTML Input 表单属性
+
+## HTML Graphics
+
+- tutorial/: HTML 图形 Graphics
+- tutorial/canvas.md: HTML 画布 Canvas
+- tutorial/svg.md: HTML SVG
+
+## HTML Media
+
+- tutorial/: HTML 媒体
+- tutorial/media.md: HTML 媒体 Media
+- tutorial/video.md: HTML 视频 Video
+- tutorial/audio.md: HTML 音频 Audio
+- tutorial/object.md: HTML 插件 Plug-ins
+- tutorial/youtube.md: HTML YouTube
+
+## HTML APIs
+
+- tutorial/: HTML APIs
+- tutorial/geolocation.md: HTML 地理定位 Geolocation
+- tutorial/draganddrop.md: HTML 拖放 Drag/Drop
+- tutorial/webstorage.md: HTML 网络存储 Web Storage
+- tutorial/webworkers.md: HTML Web Workers
+- tutorial/serversentevents.md: HTML SSE
+
+## HTML Examples
+
+- tutorial/: HTML Examples
+- tutorial/examples.md: HTML Examples
+- tutorial/quiz.md: HTML Quiz
+- tutorial/exercises.md: HTML Exercises
+- tutorial/exam.md: HTML Certificate
+- tutorial/summary.md: HTML Summary
+- tutorial/accessibility.md: HTML Accessibility
