doc: add high,href,hreflang attribute document.

--- a/idoc.yml
+++ b/idoc.yml
@@ -2,7 +2,7 @@ logo: ./logo.svg
 favicon: ./logo.svg
 
 menus:
-  Home: index.html
+  首页: index.html
   教程: tutorial/index.html
   索引: tags/index.html
 
