--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "name": "html-tutorial",
   "title": "HTML Tutorial",
-  "description": "Shell Tutorial 入门教程（Shell tutorial book）",
+  "description": "HTML（超文本标记语言——HyperText Markup Language）是构成 Web 世界的一砖一瓦。它定义了网页内容的含义和结构。",
   "license": "MIT",
   "version": "0.0.1",
   "scripts": {
