doc: add audio/video event abort/canplay/canplaythrough/ended/durationchange document.

--- a/idoc.yml
+++ b/idoc.yml
@@ -9,6 +9,10 @@ menus:
 scopePrivate: 
   - tutorial
 
+copyAssets:
+  - '**/assets/*.{mp3,ogm,ogg,mp4}'
+  - '**/assets/workplace.jpg'
+
 editButton: 
   label: GitHub 上编辑此页
   url: https://github.com/jaywcjlove/html-tutorial/blob/main/
