--- a/idoc.yml
+++ b/idoc.yml
@@ -15,6 +15,8 @@ copyAssets:
 
 cacheFileStat: true
 
+homepage: https://wangchujiang.com/html-tutorial/
+
 editButton: 
   label: GitHub 上编辑此页
   url: https://github.com/jaywcjlove/html-tutorial/blob/main/
