doc: Update docker document.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,6 +62,25 @@ jobs:
             Comparing Changes: ${{ steps.changelog.outputs.compareurl }}  
 
             ${{ steps.changelog.outputs.changelog }}
+
+            ## Docker
+
+            通过 Docker 快速简单的部署文档网站。
+
+            ```bash
+            docker pull wcjiang/html-tutorial
+            ```
+
+            ```bash
+            docker run --name html-tutorial --rm -d -p 9665:80 wcjiang/html-tutorial:latest
+            # Or
+            docker run --name html-tutorial -itd -p 9665:80 wcjiang/html-tutorial:latest
+            ```
+
+            在浏览器中访问以下 URL
+
+            ```bash
+            http://localhost:9665/
             ```
 
       # Create Docker Image
