--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -102,3 +102,20 @@ jobs:
           docker tag html-tutorial ${{ secrets.DOCKER_USER }}/html-tutorial:latest
           docker push ${{ secrets.DOCKER_USER }}/html-tutorial:${{steps.changelog.outputs.version}}
           docker push ${{ secrets.DOCKER_USER }}/html-tutorial:latest
+
+      # Create Docker Image in Github
+      - name: Login to GitHub registry
+        run: echo ${{ github.token }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+
+      - name: Build docker image
+        run: docker build -t ghcr.io/jaywcjlove/html-tutorial:latest .
+
+      - name: Publish to GitHub registry
+        run: docker push ghcr.io/jaywcjlove/html-tutorial:latest
+
+      - name: Tag docker image (beta) and publish to GitHub registry
+        if: steps.create_tag.outputs.successful
+        run: |
+            echo "version: v${{ steps.changelog.outputs.version }}"
+            docker tag ghcr.io/jaywcjlove/html-tutorial:latest ghcr.io/jaywcjlove/html-tutorial:${{steps.changelog.outputs.version}}
+            docker push ghcr.io/jaywcjlove/html-tutorial:${{steps.changelog.outputs.version}}
