--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,13 +25,13 @@ jobs:
 
       - name: Create Tag
         id: create_tag
-        uses: jaywcjlove/create-tag-action@v1.3.6
+        uses: jaywcjlove/create-tag-action@main
         with:
           package-path: ./package.json
 
       - name: get tag version
         id: tag_version
-        uses: jaywcjlove/changelog-generator@v1.5.4
+        uses: jaywcjlove/changelog-generator@main
 
       - name: Deploy Website
         uses: peaceiris/actions-gh-pages@v3
@@ -44,7 +44,7 @@ jobs:
 
       - name: Generate Changelog
         id: changelog
-        uses: jaywcjlove/changelog-generator@v1.5.4
+        uses: jaywcjlove/changelog-generator@main
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           filter-author: (jaywcjlove|小弟调调™|dependabot\[bot\]|Renovate Bot)
@@ -90,18 +90,21 @@ jobs:
         if: steps.create_tag.outputs.successful
         run: docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build docs image
-        if: steps.create_tag.outputs.successful
-        run: docker image build -t html-tutorial .
+      - name: Build docs image:latest
+        run: docker buildx build --push --platform linux/amd64,linux/arm64,linux/arm/v7 -t ${{ secrets.DOCKER_USER }}/html-tutorial:latest
 
-      - name: Tags & Push image
-        if: steps.create_tag.outputs.successful
-        run: |
-          echo "outputs.tag - ${{ steps.changelog.outputs.version }}"
-          docker tag html-tutorial ${{ secrets.DOCKER_USER }}/html-tutorial:${{steps.changelog.outputs.version}}
-          docker tag html-tutorial ${{ secrets.DOCKER_USER }}/html-tutorial:latest
-          docker push ${{ secrets.DOCKER_USER }}/html-tutorial:${{steps.changelog.outputs.version}}
-          docker push ${{ secrets.DOCKER_USER }}/html-tutorial:latest
+      # - name: Build docs image
+      #   if: steps.create_tag.outputs.successful
+      #   run: docker image build -t html-tutorial .
+
+      # - name: Tags & Push image
+      #   if: steps.create_tag.outputs.successful
+      #   run: |
+      #     echo "outputs.tag - ${{ steps.changelog.outputs.version }}"
+      #     docker tag html-tutorial ${{ secrets.DOCKER_USER }}/html-tutorial:${{steps.changelog.outputs.version}}
+      #     docker tag html-tutorial ${{ secrets.DOCKER_USER }}/html-tutorial:latest
+      #     docker push ${{ secrets.DOCKER_USER }}/html-tutorial:${{steps.changelog.outputs.version}}
+      #     docker push ${{ secrets.DOCKER_USER }}/html-tutorial:latest
 
       # Create Docker Image in Github
       - name: Login to GitHub registry
