--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,7 +91,7 @@ jobs:
         run: docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build docs image:latest
-        run: docker buildx build --push --platform linux/amd64,linux/arm64,linux/arm/v7 -t ${{ secrets.DOCKER_USER }}/html-tutorial:latest
+        run: docker buildx build --push --platform linux/amd64,linux/arm64,linux/arm/v7 -t ${{ secrets.DOCKER_USER }}/html-tutorial:latest .
 
       # - name: Build docs image
       #   if: steps.create_tag.outputs.successful
