--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,15 +86,17 @@ jobs:
             ```
 
       # Create Docker Image
-      - name: Docker login
-        if: steps.create_tag.outputs.successful
-        run: docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASSWORD }}
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build docs image:latest
-        run: |
-          docker buildx create --use
-          docker buildx ls
-          docker buildx build --push --platform linux/amd64,linux/arm64,linux/arm/v7 -t ${{ secrets.DOCKER_USER }}/html-tutorial:latest .
+      - name: Build and push image:latest
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          tags: ${{ secrets.DOCKER_USER }}/html-tutorial:latest
 
       # - name: Build docs image
       #   if: steps.create_tag.outputs.successful
