--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -96,6 +96,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
+          context: .
           tags: ${{ secrets.DOCKER_USER }}/html-tutorial:latest
 
       # - name: Build docs image
