--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,10 @@ on:
     branches:
       - main
 
+env:
+  BUILDX_VERSION: latest
+  BUILDKIT_IMAGE: wcjiang/html-tutorial
+
 jobs:
   build:
     runs-on: ubuntu-18.04
@@ -86,6 +90,8 @@ jobs:
             ```
 
       # Create Docker Image
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -96,7 +102,8 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          context: .
+          file: ./Dockerfile
+          platforms: linux/amd64,linux/arm64
           tags: ${{ secrets.DOCKER_USER }}/html-tutorial:latest
 
       # - name: Build docs image
