--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,6 +106,15 @@ jobs:
           platforms: linux/amd64,linux/arm64
           tags: ${{ secrets.DOCKER_USER }}/html-tutorial:latest
 
+      - name: Build and push image:tags
+        uses: docker/build-push-action@v3
+        if: steps.create_tag.outputs.successful
+        with:
+          push: true
+          context: .
+          platforms: linux/amd64,linux/arm64
+          tags: ${{ secrets.DOCKER_USER }}/html-tutorial:${{steps.changelog.outputs.version}}
+
       # - name: Build docs image
       #   if: steps.create_tag.outputs.successful
       #   run: docker image build -t html-tutorial .
@@ -120,18 +129,43 @@ jobs:
       #     docker push ${{ secrets.DOCKER_USER }}/html-tutorial:latest
 
       # Create Docker Image in Github
-      - name: Login to GitHub registry
-        run: echo ${{ github.token }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
-      - name: Build docker image
-        run: docker build -t ghcr.io/jaywcjlove/html-tutorial:latest .
+      - name: Login to the GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Publish to GitHub registry
-        run: docker push ghcr.io/jaywcjlove/html-tutorial:latest
+      - name: Build and push image:latest
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          context: .
+          platforms: linux/amd64,linux/arm64
+          tags: ghcr.io/jaywcjlove/html-tutorial:latest
 
-      - name: Tag docker image (beta) and publish to GitHub registry
+      - name: Build and push image:tags
+        uses: docker/build-push-action@v3
         if: steps.create_tag.outputs.successful
-        run: |
-            echo "version: v${{ steps.changelog.outputs.version }}"
-            docker tag ghcr.io/jaywcjlove/html-tutorial:latest ghcr.io/jaywcjlove/html-tutorial:${{steps.changelog.outputs.version}}
-            docker push ghcr.io/jaywcjlove/html-tutorial:${{steps.changelog.outputs.version}}
+        with:
+          push: true
+          context: .
+          platforms: linux/amd64,linux/arm64
+          tags: ghcr.io/jaywcjlove/html-tutorial:${{steps.changelog.outputs.version}}
+
+      # - name: Login to GitHub registry
+      #   run: echo ${{ github.token }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+
+      # - name: Build docker image
+      #   run: docker build -t ghcr.io/jaywcjlove/html-tutorial:latest .
+
+      # - name: Publish to GitHub registry
+      #   run: docker push ghcr.io/jaywcjlove/html-tutorial:latest
+
+      # - name: Tag docker image (beta) and publish to GitHub registry
+      #   if: steps.create_tag.outputs.successful
+      #   run: |
+      #       echo "version: v${{ steps.changelog.outputs.version }}"
+      #       docker tag ghcr.io/jaywcjlove/html-tutorial:latest ghcr.io/jaywcjlove/html-tutorial:${{steps.changelog.outputs.version}}
+      #       docker push ghcr.io/jaywcjlove/html-tutorial:${{steps.changelog.outputs.version}}
