--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 18
 
       - run: npm install
       - run: npm run build
@@ -62,7 +62,7 @@ jobs:
           name: ${{ steps.create_tag.outputs.version }}
           tag: ${{ steps.create_tag.outputs.version }}
           body: |
-            [![GitHub Repo Stars](https://img.shields.io/github/stars/jaywcjlove/html-tutorial)]() [![Docker Image Version (latest by date)](https://img.shields.io/docker/v/wcjiang/html-tutorial?logo=docker)](https://hub.docker.com/r/wcjiang/html-tutorial) [![Docker Image Size (latest by date)](https://img.shields.io/docker/image-size/wcjiang/html-tutorial?logo=docker)](https://hub.docker.com/r/wcjiang/html-tutorial) [![Docker Pulls](https://img.shields.io/docker/pulls/wcjiang/html-tutorial?logo=docker)](https://hub.docker.com/r/wcjiang/html-tutorial)
+            [![Buy me a coffee](https://img.shields.io/badge/Buy%20me%20a%20coffee-048754?logo=buymeacoffee)](https://jaywcjlove.github.io/#/sponsor) [![GitHub Repo Stars](https://img.shields.io/github/stars/jaywcjlove/html-tutorial)]() [![Docker Image Version (latest by date)](https://img.shields.io/docker/v/wcjiang/html-tutorial?logo=docker)](https://hub.docker.com/r/wcjiang/html-tutorial) [![Docker Image Size (latest by date)](https://img.shields.io/docker/image-size/wcjiang/html-tutorial?logo=docker)](https://hub.docker.com/r/wcjiang/html-tutorial) [![Docker Pulls](https://img.shields.io/docker/pulls/wcjiang/html-tutorial?logo=docker)](https://hub.docker.com/r/wcjiang/html-tutorial)
 
             Documentation ${{ steps.changelog.outputs.tag }}: https://raw.githack.com/jaywcjlove/html-tutorial/${{ steps.changelog.outputs.gh-pages-short-hash }}/index.html  
             Comparing Changes: ${{ steps.changelog.outputs.compareurl }}  
